bug fixed, added favicon

--- a/index.html
+++ b/index.html
@@ -425,11 +425,11 @@
                         <p class="app__tag">Luka, IncЗдоровье и фитнес</p>
                         <div class="app-rate">
                             <div class="app-rate-stars">
-                                <img src="images/icons/starfill.svg" alt="">
-                                <img src="images/icons/starfill.svg" alt="">
-                                <img src="images/icons/starfill.svg" alt="">
-                                <img src="images/icons/starfill.svg" alt="">
-                                <img src="images/icons/starunfill.svg" alt="">
+                                <img src="images/icons/starfill.svg" alt="Star">
+                                <img src="images/icons/starfill.svg" alt="Star">
+                                <img src="images/icons/starfill.svg" alt="Star">
+                                <img src="images/icons/starfill.svg" alt="Star">
+                                <img src="images/icons/starunfill.svg" class="unfill" alt="Star">
                             </div>
                             <p class="app-rate__text">Оценка 4,7</p>
                         </div>
@@ -507,7 +507,7 @@
                                         <img src="images/icons/starfill.svg" alt="Star">
                                         <img src="images/icons/starfill.svg" alt="Star">
                                         <img src="images/icons/starfill.svg" alt="Star">
-                                        <img src="images/icons/starunfill.svg" alt="Star">
+                                        <img src="images/icons/starunfill.svg" class="unfill" alt="Star">
                                     </div>
                                     <div class="review__rate__date">
                                         23.08.2021
